remove prompts/ui from control and put into demo app
also, demo now has basic menu bar and tracks the connection state

--- a/src/RoyalApps.Community.FreeRdp.WinForms.Demo/RoyalApps.Community.FreeRdp.WinForms.Demo.csproj
+++ b/src/RoyalApps.Community.FreeRdp.WinForms.Demo/RoyalApps.Community.FreeRdp.WinForms.Demo.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\RoyalApps.Community.FreeRdp.WinForms\RoyalApps.Community.FreeRdp.WinForms.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Ookii.Dialogs.WinForms" Version="4.0.0" />
+  </ItemGroup>
+
 </Project>
