--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -122,4 +122,4 @@ jobs:
         # NuGet server uri hosting the packages, defaults to https://api.nuget.org
         # NUGET_SOURCE: # optional, default is https://api.nuget.org
         # Flag to toggle pushing symbols along with nuget package to the server, disabled by default
-        INCLUDE_SYMBOLS: true
+        # INCLUDE_SYMBOLS: true
