--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -94,6 +94,6 @@ jobs:
 
     # Push nuget package to nuget.org
     - name: nuget push
-      run: dotnet nuget push *.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY1 }} --skip-duplicate -n 1
+      run: dotnet nuget push *.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }} --skip-duplicate -n 1
       env:
         Configuration: ${{ matrix.configuration }}
