Implemented VerifyCredentials event
The event is raised when an authentication error occurs and the login failed. Use the e.SetCredentials() method to provide new credentials and retry the connection.

--- a/src/RoyalApps.Community.FreeRdp.WinForms.Demo/RoyalApps.Community.FreeRdp.WinForms.Demo.csproj
+++ b/src/RoyalApps.Community.FreeRdp.WinForms.Demo/RoyalApps.Community.FreeRdp.WinForms.Demo.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <Product>RoyalApps.Community.FreeRdp.WinForms.Demo</Product>
     <Description>Demo app to test the FreeRDP control.</Description>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup>
