--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -78,7 +78,7 @@ jobs:
 
     # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
     - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@v1.0.2
+      uses: microsoft/setup-msbuild@v1.3.1
 
     # Build
     - name: build project
@@ -92,6 +92,13 @@ jobs:
       env:
         Configuration: ${{ matrix.configuration }}
 
+    # Upload packages
+    - name: Upload managed components
+      uses: actions/upload-artifact@v3
+      with:
+        name: FreeRdp-nupkg
+        path: ./*.nupkg
+        
     # Push nuget package to nuget.org
     - name: nuget push
       run: dotnet nuget push *.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }} --skip-duplicate
