Resolve `WFO1000` build warnings
Resolve build warning/error (new in `net9.0`):

> Error WFO1000: Property 'ABC' does not configure the code serialization for its property content

--- a/src/RoyalApps.Community.FreeRdp.WinForms/RoyalApps.Community.FreeRdp.WinForms.csproj
+++ b/src/RoyalApps.Community.FreeRdp.WinForms/RoyalApps.Community.FreeRdp.WinForms.csproj
@@ -16,7 +16,7 @@
         <LangVersion>10</LangVersion>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <NoWarn>$(NoWarn);CS8981;NU1701;WFO1000</NoWarn>
+        <NoWarn>$(NoWarn);CS8981;NU1701</NoWarn>
     </PropertyGroup>
 
     <PropertyGroup>
