Retarget projects to .NET 10 only
Remove legacy targets (.NET 9, 8 and Framework)

Switch to NuGet CPM (central package management), bump CsWin32 version.

--- a/src/RoyalApps.Community.FreeRdp.WinForms.Demo/RoyalApps.Community.FreeRdp.WinForms.Demo.csproj
+++ b/src/RoyalApps.Community.FreeRdp.WinForms.Demo/RoyalApps.Community.FreeRdp.WinForms.Demo.csproj
@@ -19,8 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ookii.Dialogs.WinForms" Version="4.0.0" />
-    <PackageReference Include="Simple.CredentialManager" Version="1.0.0" />
+    <PackageReference Include="Ookii.Dialogs.WinForms" />
+    <PackageReference Include="Simple.CredentialManager" />
   </ItemGroup>
 
 </Project>
